styles/site.scss
$primary-dark: #333;
$primary-light: #f8f8f8;
$font-stack: Helvetica, sans-serif;
$break-large: 1280px;
$break-small: 960px;
$break-mobile: 480px;


body {
    margin: 0;
}

#content {
    position: absolute;
    top: 50px;
    left: 0;
    right: 0;
    overflow: auto;
    height: calc(100vh - 78px);
    padding-top: 28px;
}

html {
    background: url('../resources/background-1920.png') no-repeat center center fixed;
    background-size: cover;
    overflow: hidden;
}

.heading {
    width: 100%;
    text-align: center;
    font: 600% 'Great Vibes', $font-stack;
    color: $primary-light;
    text-shadow: 4px 4px 3px rgba(0,0,0,0.6); 
}

.navigation-container {
    text-align: center;
    background: rgba(0,0,0,0.25);
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    height: 50px;
    ul {
        padding: 10px;        
        list-style-type: none;
        margin: 0;
        white-space: nowrap;
        li {
            display: inline-block;
            margin-right: 12px;
            font: 22px 'Open Sans Condensed', $font-stack;
            a {
                color: $primary-light;
                text-decoration: none;
                &:hover {
                    text-decoration: underline;
                }
            }
        }
    }
}

.sub-heading {
    @extend .heading;
    font-size: 200%;
}

.under-construction {
    @extend .sub-heading;
    margin-top: 96px;
    font: 400% 'Open Sans Condensed', $font-stack;
}

::-webkit-scrollbar {
    width: 12px;
}
 
::-webkit-scrollbar-thumb {
    box-shadow: inset 0 0 6px rgba(0,0,0,0.9);
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.9); 
    border-radius: 10px;
    background: rgba(0,0,0,0.5);
}

